--- a/style.css
+++ b/style.css
@@ -19,17 +19,21 @@ gap: 20px;
 
 .image-card {
 
-text-align: center;
+display: flex;
+flex-direction: column;
+align-items: center;
 
 }
 
 .image-card img {
 
-width: 100%;
+width: 70%;
+max-width: 700px;
 border-radius: 10px;
-box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+box-shadow: 0 4px 15px rgba(0,0,0,0.2);
 
 }
+
 
 .project-card {
 
@@ -183,3 +187,4 @@ padding: 5px 10px;
 cursor: pointer;
 
 }
+
