--- a/style.css
+++ b/style.css
@@ -309,6 +309,45 @@ margin-top: 10px;
 
 }
 
+/* ================= Gallery ================= */
+
+
+#gallery {
+    margin-top: 60px;
+}
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+}
+
+.gallery-item {
+    background: #111;
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: center;
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    display: block;
+}
+
+.gallery-item p {
+    padding: 10px;
+    font-size: 14px;
+    color: #ddd;
+}
+
+
+
+
+
+
+
 /* ================= IMAGE MODAL ================= */
 
 .modal {
@@ -384,6 +423,7 @@ right: 30px;
 opacity: 0.7;
 
 }
+
 
 
 
