--- a/style.css
+++ b/style.css
@@ -333,11 +333,9 @@ margin-top: 10px;
 /* FIXED: smaller image size */
 .gallery-item img {
     width: 100%;
-    height: 160px;      /* reduced from 220px */
+    aspect-ratio: 4 / 3;   /* auto size – perfect on laptops */
     object-fit: cover;
-    display: block;
 }
-
 /* Caption style */
 .gallery-item p {
     padding: 8px;
@@ -425,6 +423,7 @@ right: 30px;
 opacity: 0.7;
 
 }
+
 
 
 
